--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "description": "Cloud Functions for Basement",
   "scripts": {
     "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
@@ -13,9 +13,8 @@
     "node": "10"
   },
   "dependencies": {
-    "apple-music-jwt": "^0.2.0",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.9.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
