--- a/Basement/Resources/Info.plist
+++ b/Basement/Resources/Info.plist
@@ -18,17 +18,6 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>com.g30r93g.Basement</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>basement</string>
-			</array>
-		</dict>
-	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -81,5 +70,20 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>spotify</string>
+    </array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>com.g30r93g.Basement</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>basement</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
